# week4_exercises

./: README.md
Animals/: AC  CMakeLists.txt
Animals/src/: CMakeLists.txt  animalClasses.cpp  animalsSpeak.cpp
DimensionalAnalysis/: CMakeLists.txt  dimensionalAnalysis.h  physical_quantities.cpp  physical_quantities_dimensional.cpp
Templates/: CMakeLists.txt
Templates/include/: Fraction.h  Polynomial.h
Templates/source/: CMakeLists.txt  Fraction.cpp  Polynomial.cpp  Templates.cpp
